# twig-engine

./: .gitignore  .gitmodules  ATTRIBUTIONS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  Taskfile.yaml  build.bat  build.sh  cflags.txt
.task/checksum/: build  shaders
assets/materials/: crate.tgmat  default.tgmat  grid.tgmat
docs/: README.md  engine-internals.md  material-format.md  models.md  physics.md  projects.md  shaders.md
libs/SDL3/include/SDL3/: SDL_revision.h
libs/TGUI/include/TGUI/: Config.hpp  String.hpp
modules/config/include/: config.hpp
modules/math/include/: math.hpp
modules/output/include/: output.hpp
modules/pch/include/: pch.hpp
modules/rng/include/: rng.hpp
shaders/: fullscreen.vert  mask.frag  mesh.frag  mesh.vert  mesh_lit.frag  outline.frag  shadow.frag  ui.frag  ui.vert
src/: main.cpp
src/camera/: camera.hpp
src/core/: engine.cpp  engine.hpp  picking.hpp  thirdparty.cpp  types.hpp
src/gltf/: model.cpp  model.hpp
src/gpu/: gpu.cpp  gpu.hpp
src/material/: material.cpp  material.hpp
src/physics/: physics.cpp  physics.hpp
src/project/: project.cpp  project.hpp
src/renderer/: render.cpp  render.hpp
src/scene/: scene.hpp
src/ui/: code_editor.cpp  code_editor.hpp  dock.cpp  dock.hpp  editor.cpp  editor.hpp  gizmo.cpp  gizmo.hpp  icons.cpp  icons.hpp  nuklear_backend.cpp  nuklear_backend.hpp  nuklear_config.hpp
tools/: fetch-deps.sh
